<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topContainer"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tipjar_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/paymentsHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_history"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/enterAmountTitle"
                style="@style/MediumTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:text="@string/enter_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/amountContainer"
                android:layout_width="0dp"
                android:layout_height="82dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_gray_rounded_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterAmountTitle">

                <TextView
                    android:id="@+id/currencyText"
                    style="@style/LargeTextStyle.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:text="$"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/payment"
                    style="@style/LargeTextStyle.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:minWidth="100dp"
                    android:paddingHorizontal="8dp"
                    android:textAlignment="center"
                    android:textSize="42sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.421"
                    app:layout_constraintStart_toEndOf="@id/currencyText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="wrap" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/numberOfPeopleTitle"
                style="@style/MediumTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:text="@string/how_many_people"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountContainer" />

            <ImageButton
                android:id="@+id/addPeople"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_rounded_71dp"
                android:foreground="@drawable/ripple_default_71dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_plus_orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberOfPeopleTitle" />

            <TextView
                android:id="@+id/peopleCount"
                style="@style/LargeTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="42sp"
                app:layout_constraintBottom_toBottomOf="@id/addPeople"
                app:layout_constraintEnd_toStartOf="@id/minusPeople"
                app:layout_constraintStart_toEndOf="@id/addPeople"
                app:layout_constraintTop_toTopOf="@id/addPeople"
                tools:text="0" />

            <ImageButton
                android:id="@+id/minusPeople"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/background_rounded_71dp"
                android:foreground="@drawable/ripple_default_71dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_minus_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberOfPeopleTitle" />

            <TextView
                android:id="@+id/tipTitle"
                style="@style/MediumTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="32dp"
                android:text="@string/percent_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addPeople" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tipContainer"
                android:layout_width="0dp"
                android:layout_height="82dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_gray_rounded_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipTitle">

                <TextView
                    android:id="@+id/tipPercentText"
                    style="@style/LargeTextStyle.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:text="%"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/tipPercent"
                    style="@style/LargeTextStyle.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:minWidth="100dp"
                    android:paddingHorizontal="8dp"
                    android:textAlignment="center"
                    android:textSize="42sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tipPercentText"
                    app:layout_constraintHorizontal_bias="0.565"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="wrap" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/totalTipTitle"
                style="@style/MediumTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/total_tip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipContainer" />

            <TextView
                android:id="@+id/totalTipAmount"
                style="@style/MediumTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tipContainer" />

            <TextView
                android:id="@+id/perPersonTitle"
                style="@style/MediumTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/per_person"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalTipTitle" />

            <TextView
                android:id="@+id/perPersonAmount"
                style="@style/LargeTextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalTipAmount" />

            <CheckBox
                android:id="@+id/receiptPhotoCheckbox"
                style="@style/Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="82dp"
                android:text="@string/take_photo_of_receipt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/perPersonTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_above="@id/bottomContainer"
        android:background="@drawable/shadow_top"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer" />

    <FrameLayout
        android:id="@+id/bottomContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/savePayment"
            style="@style/MainPrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="38dp"
            android:enabled="false"
            android:text="@string/save_payment" />

    </FrameLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mainFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>